ensure tall four carousel template list on tablet is 540px wide

--- a/express/code/scripts/widgets/basic-carousel.css
+++ b/express/code/scripts/widgets/basic-carousel.css
@@ -264,9 +264,11 @@
     height: 540px;
   }
   .template-list.horizontal-fullwidth.four-square.basic-carousel .basic-carousel-container .basic-carousel-platform {
+    width: 540px;
     height: 135px
   }
   .template-list.horizontal-fullwidth.four-rectangle.basic-carousel .basic-carousel-container .basic-carousel-platform {
+    width: 540px;
     height: 275px;
     margin: auto;
   }
